--- a/apps/application/package.json
+++ b/apps/application/package.json
@@ -23,7 +23,10 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.1.4",
+    "@nestjs/websockets": "^9.1.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -39,6 +42,7 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
+    "eslint-config-custom": "*",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.1.3",
@@ -48,10 +52,9 @@
     "ts-jest": "28.0.8",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
+    "tsconfig": "*",
     "tsconfig-paths": "4.1.0",
-    "typescript": "^4.7.4",
-    "eslint-config-custom": "*",
-    "tsconfig": "*"
+    "typescript": "^4.7.4"
   },
   "jest": {
     "moduleFileExtensions": [
