--- a/packages/user/tsconfig.json
+++ b/packages/user/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "tsconfig/react-library.json",
-  "include": ["."],
+  "include": ["src"],
+  "compilerOptions": {
+    "outDir": "dist"
+  },
   "exclude": ["dist", "build", "node_modules"]
 }
