--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,25 +16,22 @@
     "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "socket.io-client": "^4.5.3",
     "styled-components": "^5.3.6",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@craco/craco": "^7.1.0",
     "@types/styled-components": "^5.1.26",
-    "craco-babel-loader": "^1.0.4",
     "eslint-config-custom": "*",
     "eslint-config-react-app": "^7.0.1",
-    "tsconfig": "*"
+    "tsconfig": "*",
+    "vite": "^4.3.2",
+    "@vitejs/plugin-react-swc": "^3.0.0"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "craco eject"
+    "start": "vite",
+    "build": "tsc && vite build"
   },
   "eslintConfig": {
     "extends": [
